--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ brigadier = "1.0.17"
 mariadb = "3.4.0"
 sqlite = "3.45.3.0"
 mysql = "8.4.0"
+adventure = "4.17.0"
 
 [libraries]
 
@@ -33,8 +34,11 @@ brigadier = { group = "com.mojang", name = "brigadier", version.ref = "brigadier
 mariadb = { group = "org.mariadb.jdbc", name = "mariadb-java-client", version.ref = "mariadb" }
 sqlite = { group = "org.xerial", name = "sqlite-jdbc", version.ref = "sqlite" }
 mysql = { group = "com.mysql", name = "mysql-connector-j", version.ref = "mysql" }
+adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "adventure" }
+adventure-text-minimessage = { group = "net.kyori", name = "adventure-text-minimessage", version.ref = "adventure" }
 
 [bundles]
 
 database = ["postgresql", "hikari", "sadu", "mariadb", "sqlite", "mysql"]
 jackson = ["jackson-databind", "jackson-yaml", "jackson-datatype-jsr310"]
+adventure = ["adventure-api", "adventure-text-minimessage"]
