--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ jackson-datatype-jsr310 = { group = "com.fasterxml.jackson.datatype", name = "ja
 postgresql = { group = "org.postgresql", name = "postgresql", version.ref = "postgresql" }
 hikari = { group = "com.zaxxer", name = "HikariCP", version.ref = "hikari" }
 sadu = { group = "de.chojo.sadu", name = "sadu", version.ref = "sadu" }
+# sadu-queries = { group = "de.chojo.sadu", name = "sadu-queries", version.ref = "sadu" }
 junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
 junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
 paper-api = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper-api" }
