--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,15 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "baseBranches": [
+    "master"
+  ],
+  "dependencyDashboard": true,
+  "labels": [
+    "dependencies"
+  ],
   "extends": [
-    "config:recommended"
+    "config:base"
+  ],
+  "reviewers": [
+    "JvstvsHD"
   ]
 }
