--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,8 +12,8 @@ on:
   release:
     types: [created]
   push:
-    branches:
-      - '**'
+    branches-ignore:
+      - 'renovate/**'
 jobs:
   publish:
     runs-on: ubuntu-latest
