--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,9 +8,9 @@ jackson-datatype-jsr310 = "2.13.4"
 jackson-yaml = "2.13.4"
 postgresql = "42.5.0"
 hikari = "5.0.1"
-sadu = "1.4.1"
+sadu = "2.2.1"
 junit = "5.9.1"
-paper-api = "1.19.2-R0.1-SNAPSHOT"
+paper-api = "1.20.6-R0.1-SNAPSHOT"
 brigadier = "1.0.17"
 mariadb = "3.4.0"
 sqlite = "3.45.3.0"
@@ -28,7 +28,7 @@ jackson-datatype-jsr310 = { group = "com.fasterxml.jackson.datatype", name = "ja
 postgresql = { group = "org.postgresql", name = "postgresql", version.ref = "postgresql" }
 hikari = { group = "com.zaxxer", name = "HikariCP", version.ref = "hikari" }
 sadu = { group = "de.chojo.sadu", name = "sadu", version.ref = "sadu" }
-# sadu-queries = { group = "de.chojo.sadu", name = "sadu-queries", version.ref = "sadu" }
+sadu-queries = { group = "de.chojo.sadu", name = "sadu-queries", version.ref = "sadu" }
 junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
 junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
 paper-api = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper-api" }
@@ -43,7 +43,7 @@ cloud-annotations = { group = "org.incendo", name = "cloud-annotations", version
 
 [bundles]
 
-database = ["postgresql", "hikari", "sadu", "mariadb", "sqlite", "mysql"]
+database = ["postgresql", "hikari", "sadu", "mariadb", "sqlite", "mysql", "sadu-queries"]
 jackson = ["jackson-databind", "jackson-yaml", "jackson-datatype-jsr310"]
 adventure = ["adventure-api", "adventure-text-minimessage"]
 cloud = ["cloud-core", "cloud-annotations"]
