--- a/.github/workflows/deploy-javadocs.yml
+++ b/.github/workflows/deploy-javadocs.yml
@@ -12,6 +12,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up JDK 
         uses: actions/setup-java@v4
+        with:
+            distribution: 'temurin'
+            java-version: '21'
       - name: Generat javadocs
         run: ./gradlew alljavadoc
       - name: Deploy 🚀
