--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,9 +12,8 @@ sadu = "2.2.1"
 junit = "5.9.1"
 paper-api = "1.20.6-R0.1-SNAPSHOT"
 brigadier = "1.0.500"
-mariadb = "3.4.0"
-sqlite = "3.45.3.0"
-mysql = "8.4.0"
+mariadb = "3.4.1"
+mysql = "9.0.0"
 adventure = "4.17.0"
 cloud = "2.0.0-SNAPSHOT"
 eventbus = "3.3.1"
@@ -24,38 +23,50 @@ minecraftdependencydownload = "1.0.0"
 
 [libraries]
 
+# Server, plugins, Minecraft-related
 velocity-api = { group = "com.velocitypowered", name = "velocity-api", version.ref = "velocity-api" }
+paper-api = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper-api" }
 luckperms-api = { group = "net.luckperms", name = "api", version.ref = "luckperms-api" }
+brigadier = { group = "com.mojang", name = "brigadier", version.ref = "brigadier" }
+
+# Serialization
 jackson-databind = { group = "com.fasterxml.jackson.core", name = "jackson-databind", version.ref = "jackson-databind" }
 jackson-yaml = { group = "com.fasterxml.jackson.dataformat", name = "jackson-dataformat-yaml", version.ref = "jackson-yaml" }
 jackson-datatype-jsr310 = { group = "com.fasterxml.jackson.datatype", name = "jackson-datatype-jsr310", version.ref = "jackson-datatype-jsr310" }
+
+# Database
+sadu-core = { group = "de.chojo.sadu", name = "sadu", version.ref = "sadu" }
+sadu-queries = { group = "de.chojo.sadu", name = "sadu-queries", version.ref = "sadu" }
 postgresql = { group = "org.postgresql", name = "postgresql", version.ref = "postgresql" }
 hikari = { group = "com.zaxxer", name = "HikariCP", version.ref = "hikari" }
-sadu = { group = "de.chojo.sadu", name = "sadu", version.ref = "sadu" }
-sadu-queries = { group = "de.chojo.sadu", name = "sadu-queries", version.ref = "sadu" }
-junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
-junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
-paper-api = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper-api" }
-brigadier = { group = "com.mojang", name = "brigadier", version.ref = "brigadier" }
 mariadb = { group = "org.mariadb.jdbc", name = "mariadb-java-client", version.ref = "mariadb" }
-sqlite = { group = "org.xerial", name = "sqlite-jdbc", version.ref = "sqlite" }
 mysql = { group = "com.mysql", name = "mysql-connector-j", version.ref = "mysql" }
+
+# Communication and logging
+slf4j-api = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4j" }
 adventure-api = { group = "net.kyori", name = "adventure-api", version.ref = "adventure" }
 adventure-text-minimessage = { group = "net.kyori", name = "adventure-text-minimessage", version.ref = "adventure" }
 adventure-text-serializer-plain = { group = "net.kyori", name = "adventure-text-serializer-plain", version.ref = "adventure" }
+
+# Cloud
 cloud-core = { group = "org.incendo", name = "cloud-core", version.ref = "cloud" }
 cloud-annotations = { group = "org.incendo", name = "cloud-annotations", version.ref = "cloud" }
 cloud-velocity = { group = "org.incendo", name = "cloud-velocity", version.ref = "cloud" }
 cloud-minecraft-extras = { group = "org.incendo", name = "cloud-minecraft-extras", version.ref = "cloud" }
 cloud-brigadier = { group = "org.incendo", name = "cloud-brigadier", version.ref = "cloud" }
+
+# Testing
+junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
+junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
+
 jetbrains-annotations = { group = "org.jetbrains", name = "annotations", version.ref = "jetbrains-annotations" }
 eventbus = { group = "org.greenrobot", name = "eventbus-java", version.ref = "eventbus" }
-slf4j-api = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4j" }
 minecraftdependencydownload-velocity = { group = "dev.vankka", name = "minecraftdependencydownload-velocity", version.ref = "minecraftdependencydownload" }
 
 [bundles]
 
-database = ["postgresql", "hikari", "mariadb", "sqlite", "mysql"]
+database-helper = ["sadu-core", "sadu-queries", "hikari"]
+database-drivers = ["postgresql", "hikari", "mariadb", "mysql"]
 jackson = ["jackson-databind", "jackson-yaml", "jackson-datatype-jsr310"]
 adventure = ["adventure-api", "adventure-text-minimessage", "adventure-text-serializer-plain"]
 cloud = ["cloud-core", "cloud-annotations", "cloud-minecraft-extras"]
