[skip ci] use dependency-updates as new base branch which does not trigger workflow runs

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,8 @@ on:
   release:
     types: [created]
   push:
-    branches: ["**"]
+    branches: ["**", "!dependency-updates"]
+
 
 jobs:
   publish:
