[skip ci] Make PR check working

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: Build project and generate JavaDocs
-on: [push, pull_request]
+on:
+  push:
+    branches: [ "**"]
+    pull_request:
 jobs:
   publish:
     runs-on: ubuntu-latest
