--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ on:
   release:
     types: [created]
   push:
-    branches: ["**", "!dependency-updates"]
+    branches: ["**", "!dependency-updates", "!renovate/**"]
 
 
 jobs:
