--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,9 @@ on:
   release:
     types: [created]
   push:
-    branches: ["**", "!dependency-updates", "!renovate/**"]
+    branches-ignore:
+      - 'renovate/**'
+      - 'dependency-updates'
 
 
 jobs:
