--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: Build project and generate JavaDocs
 on:
-  push:
-    branches: [ "**"]
-    pull_request:
+  pull_request:
+    branches:
+      - "**"
 jobs:
   publish:
     runs-on: ubuntu-latest
