--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,11 @@ jobs:
         run: ./gradlew build --stacktrace
       - name: Generate javadocs
         run: ./gradlew alljavadoc --stacktrace
+      - name: Deploy 🚀
+        if: ${{ !contains(github.head_ref, 'renovate/') }}
+        uses: JamesIves/github-pages-deploy-action@v4
+        withfolder: build/docs/javadoc
+          target-folder: javadoc
   publish:
     needs: build
     runs-on: ubuntu-latest
@@ -45,13 +50,3 @@ jobs:
          SONATYPE_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SIGNING_KEY }}
          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
-  documentation:
-    needs: build
-    runs-on: ubuntu-latest
-    if: ${{ !contains(github.head_ref, 'renovate/') }}
-    steps:
-    - name: Deploy 🚀
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        folder: build/docs/javadoc
-        target-folder: javadoc
