--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,9 @@ jobs:
       - name: Deploy 🚀
         if: ${{ !contains(github.head_ref, 'renovate/') }}
         uses: JamesIves/github-pages-deploy-action@v4
-        withfolder: build/docs/javadoc
-          target-folder: javadoc
+        with:
+          folder: build/docs/javadoc
+            target-folder: javadoc
   publish:
     needs: build
     runs-on: ubuntu-latest
