[skip ci] add last updated to documentation and change workflows

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,7 +95,8 @@ plugins:
   - glightbox:
       loop: true
   - search
-
+  - git-revision-date-localized:
+      enable_creation_date: true
 
 extra:
   consent:
