--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,12 +2,14 @@ name: Deploy Documentation
 on:
   push:
     branches:
-      - "**"
+      - '**'
+      - '!renovate/**'
 permissions:
   contents: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.head_ref, 'renovate/') }}
     steps:
       - uses: actions/checkout@v4
       - name: Configure Git Credentials
@@ -26,4 +28,5 @@ jobs:
             mkdocs-material-
       - run: pip install mkdocs-material
       - run: pip install mkdocs-glightbox
+      - run: pip install mkdocs-git-revision-date-localized-plugin
       - run: mkdocs gh-deploy --force
