--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,6 +8,7 @@ permissions:
   contents: write
 jobs:
   deploy:
+    if: ${{ github.actor != 'renovate[bot]' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
