[skip ci] correct workflow syntax

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: Publish project and JavaDocs
 on:
   push:
     branches:
-     - "**"
-     - "!renovate**"
+      - '**'
+      - '!renovate**'
 jobs:
   publish:
     if: ${{ github.actor != 'renovate[bot]' }}
