--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,9 +21,9 @@ jobs:
        run: ./gradlew build --stacktrace
      - name: Publish
        if: ${{ github.event_name == 'push' && !startsWith(github.ref, 'renovate/**') }}
-       run: ./gradlew publish --stacktrace
+       run: ./gradlew publishToMavenCentral --stacktrace
        env:
-         SONATYPE_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-         SONATYPE_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-         ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SIGNING_KEY }}
-         ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
+         ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.OSSRH_USERNAME }}
+         ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.OSSRH_TOKEN }}
+         ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
+         ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
