--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 # Generate from settings.gradle.kts
 
 [versions]
-velocity-api = "3.4.0-SNAPSHOT"
+velocity-api = "3.4.0-20251109.200241-113"
 luckperms-api = "5.4"
 jackson-databind = "2.18.2"
 jackson-datatype-jsr310 = "2.18.2"
@@ -10,13 +10,13 @@ postgresql = "42.7.5"
 hikari = "6.2.1"
 sadu = "2.3.1"
 junit = "5.11.4"
-paper-api = "1.21.4-R0.1-SNAPSHOT"
+paper-api = "1.21.10-R0.1-20251130.224641-45"
 brigadier = "1.0.500"
 mariadb = "3.5.2"
 mysql = "9.2.0"
 adventure = "4.19.0"
 cloud = "2.0.0"
-cloud-minecraft = "2.0.0-SNAPSHOT"
+cloud-minecraft = "2.0.0-beta.13"
 eventbus = "3.3.1"
 jetbrains-annotations = "26.0.2"
 slf4j = "2.0.17"
